--- a/src/components/resetPassword/resetPassword.module.css
+++ b/src/components/resetPassword/resetPassword.module.css
@@ -39,6 +39,12 @@
     font-size: 2.5rem;
     text-shadow: -.15rem .15rem 0 #03A678;
     font-family: "Cause", cursive;
+    cursor: default;
+    text-align: center;
+}
+.header::selection
+{
+    background: none;
 }
 .backgroundSVG
 {
